--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GOLDAI Token</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GOLDAi Token</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #121212;
+      background: url('https://gateway.pinata.cloud/ipfs/bafybeiddn762mxsvcqkcpztysiwul2m3znzolnqkcck6fsdtuxi3yraati') no-repeat center center fixed;
+      background-size: cover;
       color: #ffffff;
+      backdrop-filter: blur(6px);
     }
     header {
       text-align: center;
       padding: 40px 20px;
+      background-color: rgba(0, 0, 0, 0.6);
     }
     header img {
       width: 120px;
       height: auto;
     }
     h1 {
-      font-size: 2.5em;
+      font-size: 2.8em;
       margin: 20px 0 10px;
+      color: gold;
     }
     section {
       max-width: 900px;
       margin: auto;
       padding: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 8px;
+      margin-top: 20px;
     }
     .section-title {
-      border-bottom: 1px solid #444;
+      border-bottom: 1px solid #888;
       margin-bottom: 10px;
       padding-bottom: 5px;
       font-size: 1.6em;
+      color: #FFD700;
     }
     a {
       color: #00bcd4;
@@ -42,64 +50,100 @@
       text-align: center;
       padding: 40px 20px;
       font-size: 0.9em;
-      color: #aaa;
+      color: #ccc;
+    }
+    input, textarea, button {
+      padding: 10px;
+      margin-bottom: 10px;
+      font-size: 1em;
+      border-radius: 4px;
+      border: none;
+      width: 100%;
+    }
+    button {
+      background-color: #FFD700;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <img src="https://gateway.pinata.cloud/ipfs/bafybeiddn762mxsvcqkcpztysiwul2m3znzolnqkcck6fsdtuxi3yraati" alt="GOLDAI Logo">
-    <h1>GOLDAI (GOAi)</h1>
-    <p>Where timeless value meets tomorrow’s intelligence.</p>
+    <img src="https://gateway.pinata.cloud/ipfs/bafybeiddn762mxsvcqkcpztysiwul2m3znzolnqkcck6fsdtuxi3yraati" alt="GOLDAi Logo" />
+    <h1>GOLDAi</h1>
+    <p>The Golden Age of Crypto — Powered by AI and Backed by Scarcity.</p>
   </header>
 
   <section>
-    <div class="section-title">About the Token</div>
-    <p>GOLDAI (GOAi) is a utility token built on the XRP Ledger, blending the enduring value of gold with the innovative power of artificial intelligence. With a fixed supply of 25,000,000 tokens, GOAi is designed for stability, transparency, and long-term value growth.</p>
+    <div class="section-title">About GOLDAi</div>
+    <p><strong>GOLDAi</strong> is a forward-focused digital asset built on the XRP Ledger that blends the historical strength of gold with the exponential potential of artificial intelligence. With a fixed and immutable supply of 25,000,000 tokens—mirroring the scarcity of Bitcoin’s 21,000,000 cap—GOLDAi is positioned as a decentralized reserve asset built for generational wealth and long-term stability.</p>
+    <p>In a world of rising inflation, economic volatility, and global digital transformation, GOLDAi bridges the past and future: gold's store of value and AI’s revolutionary potential. This is the Golden Age of crypto — and nothing represents it better than GOLDAi.</p>
   </section>
 
   <section>
-    <div class="section-title">Token Details</div>
+    <div class="section-title">Tokenomics</div>
     <ul>
-      <li><strong>Token Name:</strong> Golden Age AI</li>
-      <li><strong>Symbol:</strong> GOAi</li>
-      <li><strong>Total Supply:</strong> 25,000,000 (Fixed)</li>
-      <li><strong>Issuer Address:</strong> <a href="https://xrpscan.com/account/rHTCgtrMj7YMcqM6U28pfnfD2AXuiywRv1" target="_blank">rHTCgtrMj7YMcqM6U28pfnfD2AXuiywRv1</a></li>
-      <li><strong>TrustLine Setup:</strong> <a href="https://xrpl.services/?issuer=rHTCgtrMj7YMcqM6U28pfnfD2AXuiywRv1&currency=GOAi&limit=25000000" target="_blank">Add TrustLine</a></li>
+      <li><strong>Total Supply:</strong> 25,000,000 (Blackholed and permanently fixed)</li>
+      <li><strong>Blockchain:</strong> XRP Ledger</li>
+      <li><strong>Transfer Speed:</strong> ~3-5 seconds worldwide</li>
+      <li><strong>Transaction Fees:</strong> Fractions of a cent</li>
+      <li><strong>Use Cases:</strong> Global wealth transfer, AI infrastructure payments, gold-backed value exchange</li>
+      <li><strong>Real-world Relevance:</strong> Gold trading above $2,300/oz — Bitcoin nearing record highs at $100,000 — GOLDAi opens a new path to value</li>
+      <li><strong>Initial Offering:</strong> Phase 1 starting at $0.75 per GOLDAi — a limited opportunity to acquire at ground floor value</li>
+      <li><strong>Distribution:</strong> Community-focused with future incentives and presale opportunity beginning with Phase 1 pricing</li>
     </ul>
   </section>
 
   <section>
-    <div class="section-title">White Paper</div>
-    <p>GOLDAI represents a convergence of heritage and innovation. Anchored in the symbolic value of gold and driven by the utility of decentralized AI-focused systems, GOAi seeks to support future-forward applications and investment models.</p>
-    <p>Key areas of focus include:</p>
-    <ul>
-      <li>AI investment ecosystems</li>
-      <li>Tokenized gold reserve modeling</li>
-      <li>On-chain trust and verification</li>
-      <li>Global participation through decentralized infrastructure</li>
-    </ul>
-  </section>
+    <div class="section-title">Buy GOLDAi (Automated Presale)</div>
+    <p>Use the form below to buy GOLDAi using XRP. Your tokens will be sent automatically after payment is confirmed.</p>
+    <form id="goldai-purchase-form">
+      <input type="text" id="xrplWallet" name="xrplWallet" placeholder="Your XRPL Wallet Address" required>
+      <input type="text" id="txHash" name="txHash" placeholder="Transaction Hash (after sending XRP)" required>
+      <button type="submit">Submit Purchase</button>
+    </form>
+    <p>Need a wallet? We recommend <a href="https://xaman.app" target="_blank">Xaman (formerly XUMM)</a>.</p>
+    <p>Don't forget to <a href="https://xrpl.services/?issuer=rHTCgtrMj7YMcqM6U28pfnfD2AXuiywRv1&currency=GOAi&limit=25000000" target="_blank">add a TrustLine</a> to receive GOLDAi tokens.</p>
+    <script>
+      const form = document.getElementById('goldai-purchase-form');
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const txHash = document.getElementById('txHash').value.trim();
+        const xrplWallet = document.getElementById('xrplWallet').value.trim();
 
-  <section>
-    <div class="section-title">Roadmap</div>
-    <ul>
-      <li><strong>Q2 2024:</strong> Token creation, branding, metadata integration</li>
-      <li><strong>Q3 2024:</strong> Website launch, community onboarding, initial DEX listings</li>
-      <li><strong>Q4 2024:</strong> Strategic partnerships and AI integration exploration</li>
-      <li><strong>Q1 2025:</strong> Whitepaper v2 and long-term staking model review</li>
-    </ul>
+        try {
+          const res = await fetch('https://your-backend-url.com/purchase', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ tx_hash: txHash, destination_wallet: xrplWallet })
+          });
+
+          const data = await res.json();
+          if (data.success) {
+            alert(`Success! ${data.tokens_sent} GOLDAi sent. TX: ${data.tx}`);
+          } else {
+            alert(`Error: ${data.error}`);
+          }
+        } catch (error) {
+          alert('Server error. Please try again later.');
+        }
+      });
+    </script>
   </section>
 
   <section>
     <div class="section-title">Contact</div>
-    <p>Email: <a href="mailto:GOLDAi25@yahoo.com">GOLDAi25@yahoo.com</a></p>
+    <form action="mailto:GOLDAi25@yahoo.com" method="post" enctype="text/plain">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
   <div class="footer">
-    &copy; 2024 Golden Age AI Token. All rights reserved.
+    &copy; 2024 GOLDAi — Golden Age AI Token. All rights reserved.
   </div>
-
 </body>
 </html>
