--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
       <li><strong>Transfer Speed:</strong> ~3-5 seconds worldwide</li>
       <li><strong>Transaction Fees:</strong> Fractions of a cent</li>
       <li><strong>Use Cases:</strong> Global wealth transfer, AI infrastructure payments, gold-backed value exchange</li>
-      <li><strong>Real-world Relevance:</strong> Gold trading above $2,300/oz — Bitcoin nearing record highs at $100,000 — GOLDAi opens a new path to value</li>
-      <li><strong>Initial Offering:</strong> Phase 1 starting at $0.75 per GOLDAi — a limited opportunity to acquire at ground floor value</li>
-      <li><strong>Distribution:</strong> Community-focused with future incentives and presale opportunity beginning with Phase 1 pricing</li>
+      <li><strong>Real-world Relevance:</strong> Gold trading above $2,300/oz — Bitcoin near $100,000 — GOLDAi opens a new path to value</li>
+      <li><strong>Initial Offering:</strong> Phase 1 starting at $0.75 per GOLDAi — limited-time entry into the Golden Age</li>
+      <li><strong>Distribution:</strong> Fully automated smart distribution through wallet monitoring and settlement</li>
     </ul>
   </section>
 
   <section>
     <div class="section-title">Buy GOLDAi (Automated Presale)</div>
-    <p>Use the form below to buy GOLDAi using XRP. Your tokens will be sent automatically after payment is confirmed.</p>
+    <p>Use the form below to buy GOLDAi using XRP or USDC. Tokens will be distributed automatically after payment confirmation to the distribution wallet: <code>rgoLdaiAkvJvmNtoi1yozCSRiXpoi3ob3</code>.</p>
     <form id="goldai-purchase-form">
       <input type="text" id="xrplWallet" name="xrplWallet" placeholder="Your XRPL Wallet Address" required>
-      <input type="text" id="txHash" name="txHash" placeholder="Transaction Hash (after sending XRP)" required>
+      <input type="text" id="txHash" name="txHash" placeholder="Transaction Hash (after sending payment)" required>
       <button type="submit">Submit Purchase</button>
     </form>
     <p>Need a wallet? We recommend <a href="https://xaman.app" target="_blank">Xaman (formerly XUMM)</a>.</p>
-    <p>Don't forget to <a href="https://xrpl.services/?issuer=rHTCgtrMj7YMcqM6U28pfnfD2AXuiywRv1&currency=GOAi&limit=25000000" target="_blank">add a TrustLine</a> to receive GOLDAi tokens.</p>
+    <p>Ensure you <a href="https://xrpl.services/?issuer=rHTCgtrMj7YMcqM6U28pfnfD2AXuiywRv1&currency=GOAi&limit=25000000" target="_blank">add a TrustLine</a> to receive your GOLDAi tokens.</p>
     <script>
       const form = document.getElementById('goldai-purchase-form');
       form.addEventListener('submit', async (e) => {
@@ -134,7 +134,7 @@
 
   <section>
     <div class="section-title">Contact</div>
-    <form action="mailto:GOLDAi25@yahoo.com" method="post" enctype="text/plain">
+    <form action="https://formspree.io/f/yourFormID" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
