--- a/index.html
+++ b/index.html
@@ -132,15 +132,16 @@
     </script>
   </section>
 
-  <section>
-    <div class="section-title">Contact</div>
-    <form action="https://formspree.io/f/yourFormID" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+<section>
+  <div class="section-title">Contact</div>
+  <form action="https://formspree.io/f/xovdkoyw" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+
 
   <div class="footer">
     &copy; 2024 GOLDAi — Golden Age AI Token. All rights reserved.
