--- a/index.html
+++ b/index.html
@@ -134,12 +134,21 @@
 
 <section>
   <div class="section-title">Contact</div>
-  <form action="https://formspree.io/f/xovdkoyw" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
+<form
+  action="https://formspree.io/f/xovdkoyw"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 </section>
 
 
